--- a/game.html
+++ b/game.html
@@ -5,32 +5,60 @@
         <meta name="viewport" content="width=device-width">
         <title>BLM | Play</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <div class="container game-container">
+        <div class="container">
         <div class="row">
-            <div class="col-12">
-            <h2 id="question" class="question-title"> What is the answer to this question?</h2>
-            <div class="col-6">
-                <div class="choice-container hvr-grow">
-                    <p class="choice-prefix">A</p>
-                    <p class="choice-text" data-number="1">Choice 1</p>
+        <div id="hud" class="col-12">
+            <div class="row mt-2 mb-2">
+                <div id="hud-item" class="col-6">
+                    <p id="progressText" class="hud-prefix">
+                        Question
+                    </p>
+                    <div id="progress-bar">
+                        <div id="progressBarFull"></div>
+                    </div>
                 </div>
-                <div class="choice-container hvr-grow">
-                    <p class="choice-prefix">B</p>
-                    <p class="choice-text" data-number="2">Choice 2</p>
-                </div>
-                <div class="choice-container hvr-grow">
-                    <p class="choice-prefix">C</p>
-                    <p class="choice-text" data-number="3">Choice 3</p>
-                </div>
-                <div class="choice-container hvr-grow">
-                    <p class="choice-prefix">D</p>
-                    <p class="choice-text" data-number="4">Choice 4</p>
+                <div id="hud-item" class="col-4 offset-2">
+                    <p class="hud-prefix">
+                        Score
+                    </p>
+                    <h2 class="hud-main-text" id="score">
+                        0
+                    </h2>
                 </div>
             </div>
+        </div>
+            <div class="col-12 m-3">
+                <h2 id="question" class="question-title"> What is the answer to this question?</h2>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-6">
+                        <div class="choice-container hvr-grow">
+                            <p class="choice-prefix">A</p>
+                            <p class="choice-text" data-number="1">Choice 1</p>
+                        </div>
+                        <div class="choice-container hvr-grow">
+                            <p class="choice-prefix">B</p>
+                            <p class="choice-text" data-number="2">Choice 2</p>
+                        </div>
+                        <div class="choice-container hvr-grow">
+                            <p class="choice-prefix">C</p>
+                            <p class="choice-text" data-number="3">Choice 3</p>
+                        </div>
+                        <div class="choice-container hvr-grow">
+                            <p class="choice-prefix">D</p>
+                            <p class="choice-text" data-number="4">Choice 4</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 text-center">
+                        <i class="fas fa-fist-raised blm"></i>
+                    </div>
+                </div>
             </div>
         </div>  
         </div>    
