add spacing to site buttons

--- a/end.html
+++ b/end.html
@@ -11,6 +11,7 @@
         <div class="container end-container text-center">
             <div class="row">
                 <div class="col-12">
+                    <h1>Your final score:</h1>
                     <h1 id="finalScore" class="final-score"></h1>
                     <form>
                     <div class="col-12 username mb-2">
