--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
         <div class="container page-container text-center">
         <div class="row">
             <div class="col-12">
-            <h1>Black Lives Matter Quiz</h1>          
-            <a href="game.html" class="btn btn-danger btn-home">Play Game</a>
-            <a  href="highscore.html" class="btn btn-danger btn-home">High Scores</a>
+                <h1 class="mb-3">Black Lives Matter Quiz</h1>
+                <div class="col-12 mb-2">        
+                    <a href="game.html" class="btn btn-danger btn-home">Play Game</a>
+                </div>
+                <div class="col-12">
+                    <a  href="highscore.html" class="btn btn-danger btn-home">High Scores</a>
+                </div>
             </div>  
         </div>
         </div> 
